--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <img src="/img/영화사이트.png" class="d-block w-100" alt="무비웹">
                           </div>
                           <div class="carousel-item">
-                            <img src="/img/명함1.png" class="d-block w-100" alt="명함">
+                            <img src="..." class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
