수정후 업뎃 12.5

--- a/index.html
+++ b/index.html
@@ -62,6 +62,36 @@
                     </div>
             </section>
                     
+
+
+          <section data-scroll>
+            <div class="study">
+              <h2>STUDY</h2>
+              <br>
+              <h3>교육이력</h3>
+              <br>
+              <p>2023.05 ~ 진행중</p> <h4>100개의 클론디자인으로 배우는 uxui초격자 패키지 online(패스트캠퍼스)</h4>
+              #figma
+              <br>
+              <br> 
+              <p>2022.07 ~ 진행중</p> <h4>한번에 끝내는 프론트엔드 개발 초격자 패키지 online(패스트캠퍼스)</h4>
+              #Visual studio code #html #css #javascript
+              <br>
+              <br>
+              <p>2023.10 ~ 진행중</p> <h4>파이썬 코딩기초에서 고급까지 무조건 따라하기(인프런)</h4>
+              #pip
+              <br>
+              <br>
+              <p>2023.05 ~ 2023.11</p> <h4>동남권 ICT 이노베이션 스퀘어 - 온라인코딩(2023동남권ICT이노베이션스퀘어 혁신사업)</h4>
+              #html #css #javascript #Node.js #git #react #sql #mongdb #docker #aws
+              <br>
+              <br>
+
+            </div>
+          </section>
+
+
+
             
             <section data-scroll>
               <div class="skill">
